// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStrengthData() if strength is 0 1`] = `
Object {
  "text": "passwordStrength.useMinPasswordLength",
}
`;

exports[`getStrengthData() if strength is 1 1`] = `
Object {
  "scaleClassName": "main-input__scale--step-one",
  "text": "passwordStrength.useMinPasswordLength",
  "type": "danger",
}
`;

exports[`getStrengthData() if strength is 2 1`] = `
Object {
  "scaleClassName": "main-input__scale--step-two",
  "text": "passwordStrength.youCanUseUppercase",
  "type": "warning",
}
`;

exports[`getStrengthData() if strength is 3 1`] = `
Object {
  "icon": "success",
  "scaleClassName": "main-input__scale--step-three",
  "text": "passwordStrength.yourPasswordIsStrong",
  "type": "success",
}
`;
